--- a/templates/index.html
+++ b/templates/index.html
@@ -15,9 +15,9 @@
 </head>
 <body>
       <form action="/" method="get">
-      <label for="fname">First name:</label>
+      <label for="fname">Имя:</label>
       <input type="text" id="fname" name="fname"><br><br>
-      <label for="lname">Last name:</label>
+      <label for="lname">Фамилия:</label>
       <input type="text" id="lname" name="lname"><br><br>
       <button type="submit" >Submit</button>
       <button type="submit" formtarget="_blank">Submit to a new window</button>
