--- a/templates/index.html
+++ b/templates/index.html
@@ -12,15 +12,18 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 <!--icon -->
+
 </head>
+
 <body>
       <form action="/" method="get">
-      <label for="fname">Имя:</label>
-      <input type="text" id="fname" name="fname"><br><br>
-      <label for="lname">Фамилия:</label>
-      <input type="text" id="lname" name="lname"><br><br>
-      <button type="submit" >Submit</button>
-      <button type="submit" formtarget="_blank">Submit to a new window</button>
+          <label for="first_name">Имя:</label>
+          <input type="text" id="first_name" name="first_name_In" placeholder="Search W3Schools"><br><br>
+          <label for="second_name">Фамилия:</label>
+          <input type="text" id="second_name" name="second_name_In" placeholder="Search W3Schools"><br><br>
+          <button type="submit">Submit</button>
+          <button type="submit" formtarget="_blank">Submit to a new window</button><br><br>
     </form>
+
 </body>
 </html>
