--- a/templates/error_500.html
+++ b/templates/error_500.html
@@ -11,7 +11,7 @@
     p {
         size:16px;
         letter-spacing:1px;
-        text-align: center;;
+        text-align: center;
         font-weight: bold;
         color:#940094;
         text-transform:uppercase;
