--- a/templates/index.html
+++ b/templates/index.html
@@ -1,29 +1,40 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-<!--icon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/media/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/media/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/media/favicon-16x16.png">
-    <link rel="manifest" href="/media/site.webmanifest">
-    <link rel="mask-icon" href="/media/safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="msapplication-TileColor" content="#da532c">
-    <meta name="theme-color" content="#ffffff">
-<!--icon -->
+{% extends "base.html" %}
 
-</head>
+{% block content %}
+    {{ super() }}
+    Содержимое главной страницы<br>
+    <a href={{ url_for("about_page") }}>О сайте</a>
+{% endblock %}
 
-<body>
-      <form action="/" method="get">
-          <label for="first_name">Имя:</label>
-          <input type="text" id="first_name" name="first_name_In" placeholder="Search W3Schools"><br><br>
-          <label for="second_name">Фамилия:</label>
-          <input type="text" id="second_name" name="second_name_In" placeholder="Search W3Schools"><br><br>
-          <button type="submit">Submit</button>
-          <button type="submit" formtarget="_blank">Submit to a new window</button><br><br>
-    </form>
-
-</body>
-</html>
+{#<!DOCTYPE html>#}
+{#<html lang="en">#}
+{#<head>#}
+{#    <meta charset="UTF-8">#}
+{#    {% if title %}#}
+{#         <title>NewSite - {{title}}</title>#}
+{#    {% else %}#}
+{#         <title>NewSite</title>#}
+{#    {% endif %}#}
+{#<!--icon -->#}
+{#    <link rel="apple-touch-icon" sizes="180x180" href="/media/apple-touch-icon.png">#}
+{#    <link rel="icon" type="image/png" sizes="32x32" href="/media/favicon-32x32.png">#}
+{#    <link rel="icon" type="image/png" sizes="16x16" href="/media/favicon-16x16.png">#}
+{#    <link rel="manifest" href="/media/site.webmanifest">#}
+{#    <link rel="mask-icon" href="/media/safari-pinned-tab.svg" color="#5bbad5">#}
+{#    <meta name="msapplication-TileColor" content="#da532c">#}
+{#    <meta name="theme-color" content="#ffffff">#}
+{#<!--icon -->#}
+{##}
+{#</head>#}
+{##}
+{#<body>#}
+{#      <form action="/" method="get">#}
+{#          <label for="first_name">Имя:</label>#}
+{#          <input type="text" id="first_name" name="first_name_In" placeholder="Search W3Schools"><br><br>#}
+{#          <label for="second_name">Фамилия:</label>#}
+{#          <input type="text" id="second_name" name="second_name_In" placeholder="Search W3Schools"><br><br>#}
+{#          <button type="submit">Submit</button>#}
+{#          <button type="submit" formtarget="_blank">Submit to a new window</button><br><br>#}
+{#    </form>#}
+{#</body>#}
+{#</html>#}
