--- a/templates/error_500.html
+++ b/templates/error_500.html
@@ -7,9 +7,11 @@
 <style>
     h1 {
         text-align: center;
+        padding-top: 20px;
     }
     p {
         size:16px;
+        padding-top: 20px;
         letter-spacing:1px;
         text-align: center;
         font-weight: bold;
@@ -19,6 +21,8 @@
 </style>
 <body>
     <h1>Проблема с загрузкой страницы!</h1>
+    <p><img src="https://s8d4.turboimg.net/t1/95552197_500.jpg"/></p>
+
     <p>Идет восстановление работоспособности сервера</p>
 </body>
 </html>
