--- a/templates/index.html
+++ b/templates/index.html
@@ -2,9 +2,42 @@
 
 {% block content %}
     {{ super() }}
-    Содержимое главной страницы<br>
-    <a href={{ url_for("about_page") }}>О сайте</a>
+
+{#    <label>#}
+{#        <select name="hhhhhhhhhh">#}
+{#            <option value="fffsssssss" selected="selected">ddddddddddddd</option>#}
+{#            <option value="';;;;khh">ho;ghopuhok</option>#}
+{#        </select>#}
+{#    </label>#}
+
+    <div class="text-align: center">
+    <table>
+        <tr>
+            <td id="col00" colspan="3" height="40">{{ title }}</td>
+        </tr>
+
+        <tr>
+            <td id="col0" colspan="3" height="40">Программа для классификации месторождений нефти и газа</td>
+        </tr>
+
+        <tr>
+            <td id="col1">
+                <div class="TextInColumn">Колонка 1-1</div><br>
+                <div><a href={{ url_for("about_app_page") }}>О приложении</a></div>
+            </td>
+
+            <td id="col2">Колонка 2-1</td>
+
+            <td id="col3">
+                <div class="TextInColumn">Колонка 3-1</div><br>
+                <div><a href={{ url_for("about_page") }}>О сайте</a></div>
+            </td>
+        </tr>
+    </table>
+    </div>
+
 {% endblock %}
+
 
 {#<!DOCTYPE html>#}
 {#<html lang="en">#}
