--- a/templates/index.html
+++ b/templates/index.html
@@ -13,11 +13,11 @@
     <div class="text-align: center">
     <table>
         <tr>
-            <td id="col00" colspan="3" height="40">{{ title }}</td>
+            <td id="col00" colspan="3" height="40"><a href={{ url_for("main_page") }}>{{ title }}</a></td>
         </tr>
 
         <tr>
-            <td id="col0" colspan="3" height="40">Программа для классификации месторождений нефти и газа</td>
+            <td id="col0" colspan="3" height="60">Программа для классификации месторождений нефти и газа</td>
         </tr>
 
         <tr>
