--- a/templates/application.html
+++ b/templates/application.html
@@ -2,6 +2,24 @@
 
 {% block content %}
     {{ super() }}
-    <div>Содержимое страницы &laquo;{{ title }}&raquo;</div><br><br>
-    <a href={{ url_for("main_page") }}>Back to main page</a>
+
+    <div class="text-align: center">
+    <table>
+        <tr>
+            <td id="col00" colspan="3" height="40"><a href={{ url_for("main_page") }}>{{ title }}</a></td>
+        </tr>
+        <tr>
+            <td id="col0" colspan="3" height="60">Содержимое страницы &laquo;{{ title }}&raquo;</td>
+        </tr>
+        <tr>
+            <td id="col1" colspan="3" height="60">Описание приложение и внешний вид главного окна</td>
+        </tr>
+    </table>
+
+    <hr />
+    <br><br>
+
+    <div class="linkToMain">
+        <a href={{ url_for("main_page") }}>Back to main page</a></div>
+    </div>
 {% endblock %}
