Create styles for templates

--- a/templates/base.html
+++ b/templates/base.html
@@ -108,7 +108,11 @@
         cursor: pointer;
         text-decoration: underline;
     }
-
+    a[download]:after {
+        content: url(//webref.ru/example/image/download.png); /* Выводим картинку */
+        vertical-align: sub; /* Выравнивание по вертикали */
+        padding-left: 5px; /* Расстояние от текста до картинки */
+   }
     html {
         background: url(https://s8d3.turboimg.net/t1/95546669_bg_01.png) no-repeat center center fixed;
         -webkit-background-size: cover;
