--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,6 @@
 {% extends "base.html" %}
 
+
 {% block content %}
     {{ super() }}
 
@@ -28,7 +29,7 @@
 
             <td id="col2">
                 <div>Колонка 2-1</div><br>
-                <div><a href="/images/DisplaySwitch.html/">Открыть файл</a></div><br>
+                <div><a href="mailto:p.esaulov@sng.vniigaz.gazprom.ru">kkkkkkkkkkkkkk</a></div><br>
                 <div>Колонка 2-2</div>
             </td>
 
