Create styles for templates

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "../templates/base.html" %}
 
 
 {% block content %}
@@ -30,8 +30,8 @@
             <td id="col2">
                 <div>Колонка 2-1</div><br>
                 <div><a href="mailto:ogfc@mail.ru">Написать письмо автору</a></div><br>
-                <div><a target="_blank" href="https://s8d6.turboimg.net/t1/95552122_404.jpg" download="">Посмотреть картинку</a></div><br>
-                <div><a href="../images/404.jpg" download="404.jpg">Скачать картинку</a></div><br>
+                <div><a target="_blank" href="https://s8d6.turboimg.net/t1/95552122_404.jpg">Посмотреть картинку</a></div><br>
+                <div><a href="/images/404.jpg" download="404.jpg">Скачать картинку</a></div><br>
                 <div>Колонка 2-2</div>
             </td>
 
