--- a/templates/base.html
+++ b/templates/base.html
@@ -20,6 +20,7 @@
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 <!--icon -->
+    <meta content="application/pdf">
 
 <style class="text/css">
     table {
@@ -161,6 +162,7 @@
 {#    {% endif -%}#}
 {% endblock -%}
 
+<img src="../media/favicon-32x32.png" alt="Моё тестовое изображение" /><br>
 
     <div class="footer">
         <div style="margin-right: 10px">&copy;&nbsp;Павел Есаулов</div>
