Change for 'pythonanywhere'

--- a/templates/base.html
+++ b/templates/base.html
@@ -35,11 +35,6 @@
         align: center;
         border: 20px;
     }
-    {#.box div {#}
-    {#    width: 90px;#}
-    {#    alignment: center;#}
-    {#    display: inline-block;#}
-    {#}#}
 
     #col00 {
         width: 95%; /* Ширина нульнулевой колонки */
@@ -109,11 +104,7 @@
         cursor: pointer;
         text-decoration: underline;
     }
-   {# a[download]:after {#}
-   {#     content: url(//webref.ru/example/image/download.png); /* Выводим картинку */#}
-   {#     vertical-align: sub; /* Выравнивание по вертикали */#}
-   {#     padding-left: 5px; /* Расстояние от текста до картинки */#}
-   {#}#}
+
     html {
         background: url(https://s8d3.turboimg.net/t1/95546669_bg_01.png) no-repeat center center fixed;
         -webkit-background-size: cover;
@@ -165,7 +156,7 @@
 <img src="../media/favicon-32x32.png" alt="Моё тестовое изображение" /><br>
 
     <div class="footer">
-        <div style="margin-right: 10px">&copy;&nbsp;Павел Есаулов</div>
+        <div style="margin-right: 10px"><a href="mailto:ogfc@mail.ru?subject=Вопрос по Классификатору">&copy;&nbsp;Павел Есаулов</a></div>
     </div>
 
 </body>
