--- a/templates/index.html
+++ b/templates/index.html
@@ -29,7 +29,7 @@
 
             <td id="col2">
                 <div>Колонка 2-1</div><br>
-                <div><a href="mailto:ogfc@mail.ru">Написать письмо автору</a></div><br>
+                <div><a href="mailto:ogfc@mail.ru?subject=Вопрос по Классификатору">Написать письмо автору</a></div><br>
                 <div><a target="_blank" href="https://s8d6.turboimg.net/t1/95552122_404.jpg">Посмотреть картинку</a></div><br>
                 <div>Колонка 2-2</div>
             </td>
