Change for 'pythonanywhere'

--- a/templates/error_404.html
+++ b/templates/error_404.html
@@ -23,7 +23,7 @@
 
 <body>
     <h1>Страница не найдена!</h1>
-    <p><img src="https://s8d6.turboimg.net/t1/95552122_404.jpg" alt="404 error" /></p>
+    <p><img src="https://s8d6.turboimg.net/t1/95552122_404.jpg" alt="404 error" sizes="80" style="width: 600px;" /></p>
     <p>То, что вы искали, просто не существует.</p>
     <p>Для продолжения перейдите на  <a href="{{ url_for("main_page") }}" title="нажмите, чтобы перейти"> главную</a> страницу сайта</p>
 
