--- a/templates/application.html
+++ b/templates/application.html
@@ -6,7 +6,8 @@
     <div class="text-align: center">
     <table>
         <tr>
-            <td id="col00" colspan="3" height="40"><a href={{ url_for("main_page") }}>{{ title }}</a></td>
+            <td id="col00" colspan="3" height="40"><a title="переход на главную страницу" href={{ url_for("main_page") }}>Главная</a> \
+            <a href={{ url_for("about_app_page") }}> {{ title }}</a></td>
         </tr>
         <tr>
             <td id="col0" colspan="3" height="60">Содержимое страницы &laquo;{{ title }}&raquo;</td>
