--- a/templates/base.html
+++ b/templates/base.html
@@ -153,10 +153,8 @@
 {#    {% endif -%}#}
 {% endblock -%}
 
-<img src="../media/favicon-32x32.png" alt="Моё тестовое изображение" /><br>
-
     <div class="footer">
-        <div style="margin-right: 10px"><a href="mailto:ogfc@mail.ru?subject=Вопрос по Классификатору">&copy;&nbsp;Павел Есаулов</a></div>
+        <div style="margin-right: 10px">&copy;&nbsp;Павел Есаулов</div>
     </div>
 
 </body>
