Change for 'pythonanywhere'

--- a/templates/about.html
+++ b/templates/about.html
@@ -15,15 +15,33 @@
         <tr>
             <td id="col1" colspan="3" height="60">
                 <div>Описание сайта, указание службы поддержки и электронной почты</div><hr>
-                <div><a title="написать письмо автору" href="mailto:ogfc@mail.ru?subject=Вопрос по Классификатору">Написать письмо автору</a></div>
             </td>
-
         </tr>
+
+        <tr>
+			<td id="col_email">
+    			<div>
+                    <a target="_blank" href="/classificator/images/new_mail.png">
+                        <img src="/classificator/images/new_mail.png" alt="QR with mail address" width="185"; height="185"; style="margin-left: 3px; margin-top: 3px; margin-right: 3px; margin-bottom: 3px;"; class="zoom-effect">
+                    </a>
+                </div>
+                <a target="_blank" title="Связаться с автором" href="mailto:ogfc@mail.ru?subject=Вопрос по Классификатору 5.4";>Написать письмо автору</a>
+			</td>
+
+			<td id="col_url">
+    			<div>
+                    <a target="_blank" href="/classificator/images/new_url.png">
+                        <img src="/classificator/images/new_url.png" alt="QR with url-address" width="185"; height="185"; style="margin-left: 3px; margin-top: 3px; margin-right: 3px; margin-bottom: 3px;"; class="zoom-effect">
+                    </a>
+                </div>
+                <a target="_blank" title="Открыть QR-код в новом окне" href="/classificator/images/new_url.png">Открыть в новом окне для сканирования</a>
+			</td>
+		</tr>
     </table>
 
     <hr />
-    <br><br>
-        <div class="linkToMain">
-            <a title="нажми, чтобы перейти" href={{ url_for("main_page") }}>Back to main page</a></div>
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+    <div class="linkToMain">
+        <a title="Нажмите, чтобы перейти" href={{ url_for("main_page") }}>Вернуться на главную страницу</a></div>
     </div>
 {% endblock %}
