--- a/templates/application.html
+++ b/templates/application.html
@@ -21,6 +21,6 @@
     <br><br>
 
     <div class="linkToMain">
-        <a href={{ url_for("main_page") }}>Back to main page</a></div>
+        <a title="Нажмите, чтобы перейти" href={{ url_for("main_page") }}>Вернуться на главную страницу</a></div>
     </div>
 {% endblock %}
