--- a/templates/base.html
+++ b/templates/base.html
@@ -12,11 +12,11 @@
     {% endblock %}
 
 <!--icon -->
-    <link rel="apple-touch-icon" sizes="180x180" href="/media/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/media/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/media/favicon-16x16.png">
-    <link rel="manifest" href="/media/site.webmanifest">
-    <link rel="mask-icon" href="/media/safari-pinned-tab.svg" color="#5bbad5">
+    <link rel="apple-touch-icon" sizes="180x180" href="/classificator/media/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/classificator/media/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/classificator/media/favicon-16x16.png">
+    <link rel="manifest" href="/classificator/media/site.webmanifest">
+    <link rel="mask-icon" href="/classificator/media/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="msapplication-TileColor" content="#da532c">
     <meta name="theme-color" content="#ffffff">
 <!--icon -->
@@ -72,7 +72,6 @@
     }
     .TextInColumn {
         font-weight: bold;
-        {#color: red;#}
         font-size: 20px;
     }
 
@@ -90,8 +89,25 @@
         border-radius: 10px 10px 10px 10px;
         box-shadow: 0 4px 8px rgba(0, 0.3, 0.3, 0.5);
     }
+
+    #col_email {
+        text-align: right;
+        width: 50%;
+        padding-right: 90px;  /* separate between cells (range) */
+    }
+
+    #col_url {
+        text-align: left;
+        width: 50%;
+        padding-left: 90px;  /* separate between cells (range) */
+    }
+
     .linkToMain {
-        margin-left: 10px;
+        margin-right: 10px;
+        margin-bottom: 10px;
+        bottom: 10px;
+        left: 10px;
+        position: fixed;
     }
 
     a {
@@ -107,7 +123,7 @@
     }
 
     html {
-        background: url(https://s8d3.turboimg.net/t1/95546669_bg_01.png) no-repeat center center fixed;
+        background: url(/classificator/images/bg_01.jpg) no-repeat center center fixed;
         -webkit-background-size: cover;
         -moz-background-size: cover;
         -o-background-size: cover;
@@ -118,7 +134,8 @@
         margin: 0;
         color: #000000;
         /* Растягиваем body по высоте html */
-        min-height: 100%;
+        min-height: 50%;
+        min-width: 50%;
         display: grid;
         grid-template-rows: auto 1fr auto;
     }
@@ -128,11 +145,18 @@
         font-weight: bold;
         color: #005a9d;
         margin-bottom: 10px;
-        position: absolute;
+        position: fixed;  /*absolute;*/ /* footer всегда в нижней части экрана */
         bottom: 0;
         width: 100%;
     }
 
+    .zoom-effect {
+        transition: 0.5s;
+    }
+
+    .zoom-effect:hover {
+        transform: scale(2);
+    }
 </style>
 
 </head>
