--- a/templates/index.html
+++ b/templates/index.html
@@ -4,13 +4,6 @@
 {% block content %}
     {{ super() }}
 
-{#    <label>#}
-{#        <select name="hhhhhhhhhh">#}
-{#            <option value="fffsssssss" selected="selected">ddddddddddddd</option>#}
-{#            <option value="';;;;khh">ho;ghopuhok</option>#}
-{#        </select>#}
-{#    </label>#}
-
     <div class="text-align: center">
     <table>
         <tr>
@@ -29,8 +22,8 @@
 
             <td id="col2">
                 <div>Колонка 2-1</div><br>
-                <div><a href="mailto:ogfc@mail.ru?subject=Вопрос по Классификатору">Написать письмо автору</a></div><br>
-                <div><a target="_blank" href="https://s8d6.turboimg.net/t1/95552122_404.jpg">Посмотреть картинку</a></div><br>
+                <div><a target="_blank" href="/classificator/images/404.jpg">Посмотреть картинку</a></div><br>
+                <div><a href="/classificator/images/404.jpg" download="404.jpg">Скачать картинку</a></div><br>
                 <div>Колонка 2-2</div>
             </td>
 
