Change for 'pythonanywhere'

--- a/templates/base.html
+++ b/templates/base.html
@@ -70,6 +70,13 @@
         border-radius: 10px 10px 10px 10px;
         box-shadow: 0 4px 8px rgba(0, 0.3, 0.3, 0.5);
     }
+    #col_App {
+        width: 20%; /* Ширина первой колонки */
+        background: rgba(67, 255, 0, 0.5); /* Цвет фона первой колонки */
+        padding: 10px;
+        border-radius: 10px 10px 10px 10px;
+        box-shadow: 0 4px 8px rgba(0, 0.3, 0.3, 0.5);
+    }
     .TextInColumn {
         font-weight: bold;
         font-size: 20px;
@@ -104,8 +111,8 @@
 
     .linkToMain {
         margin-right: 10px;
-        margin-bottom: 10px;
-        bottom: 10px;
+        margin-bottom: 15px;
+        bottom: 15px;
         left: 10px;
         position: fixed;
     }
