--- a/templates/application.html
+++ b/templates/application.html
@@ -13,10 +13,14 @@
             <td id="col0" colspan="3" height="60">Содержимое страницы &laquo;{{ title }}&raquo;</td>
         </tr>
         <tr>
-            <td id="col1" colspan="3" height="60">Описание приложение и внешний вид главного окна</td>
+            <td id="col_App" colspan="3" height="60">Описание приложение и внешний вид главного окна</td>
         </tr>
     </table>
-
+        <ul>
+            {% for m in menu -%}
+                <li>{{m}}</li>
+            {% endfor -%}
+        </ul>
     <hr />
     <br><br>
 
