Change for 'pythonanywhere'

--- a/templates/base.html
+++ b/templates/base.html
@@ -150,12 +150,10 @@
     }
 
     .footer {
-        border-top-width: 3px;
-        border-top: black;
         text-align: right;
         font-weight: bold;
         color: #005a9d;
-        margin-bottom: 15px;
+        margin-bottom: 5px;
         position: fixed;  /*absolute;*/ /* footer всегда в нижней части экрана */
         bottom: 0;
         width: 100%;
@@ -190,7 +188,7 @@
 {% endblock -%}
 
     <div class="footer">
-        <div style="margin-right: 15px; border-top-style: solid;">&copy;&nbsp;Павел Есаулов</div>
+        <div style="margin-right: 5px; padding-top: 5px;">&copy;&nbsp;Павел Есаулов</div>
     </div>
 
 </body>
