--- a/templates/about.html
+++ b/templates/about.html
@@ -42,6 +42,7 @@
 
 
     <div class="linkToMain">
+        <img src="/classificator/images/main_64.png" alt="home"/>
         <a title="Нажмите, чтобы перейти" href={{ url_for("main_page") }}>Вернуться на главную страницу</a></div>
     </div>
 {% endblock %}
