--- a/templates/application.html
+++ b/templates/application.html
@@ -27,6 +27,6 @@
 
 
     <div class="linkToMain">
-        <a title="Нажмите, чтобы перейти" href={{ url_for("main_page") }}>Вернуться на главную страницу</a></div>
+        <a title="Нажмите, чтобы перейти" href={{ url_for("main_page") }}><img src="/classificator/media/main_64.png" alt="home" width="16"; height="16"; style="margin-right: 10px;";/>Вернуться на главную страницу</a></div>
     </div>
 {% endblock %}
