--- a/templates/base.html
+++ b/templates/base.html
@@ -22,151 +22,7 @@
 <!--icon -->
     <meta content="application/pdf">
 
-<style class="text/css">
-    table {
-        alignment: center;
-        margin: auto;  /* center of the table */
-        border-collapse: separate; /* separate between cells */
-        border-spacing: 15px; /* separate between cells (range) */
-        width: 95%; /* width of the column */
-    }
-    TD {
-        text-align: center;
-        align: center;
-        border: 20px;
-        color: rgb(0, 43, 73);
-    }
-
-    #col00 {
-        width: 95%; /* Ширина нульнулевой колонки */
-    {#background: rgba(236, 64, 255, 0.99); /* Цвет фона нулевой колонки */#}
-        vertical-align: center;
-        text-align: left;
-        padding: 20px;
-        border-radius: 10px 10px 10px 10px;
-        box-shadow: 0 4px 8px rgba(0, 0.3, 0.3, 0.5);
-        font-size: 26px;
-        font-weight: bold;
-        background: rgb(0, 156, 174);
-        background: linear-gradient(90deg, rgba(201, 0, 255, 1) 0%, rgba(73, 9, 121, 1) 35%, rgba(0, 156, 174, 0.824) 100%);
-    }
-    #col0 {
-        width: 95%; /* Ширина нулевой колонки */
-        {#background: rgba(64, 116, 255, 0.99);#}
-        color: rgb(255, 255, 0);
-        text-shadow: 1px 0 rgb(128,128,128),2px 2px 1px rgba(0,0,0,1);
-        vertical-align: center; /* Цвет фона нулевой колонки */
-        border-radius: 10px 10px 10px 10px;
-        box-shadow: 0 4px 8px rgba(0, 0.3, 0.3, 0.5);
-        font-size: 25px;
-        font-weight: bold;
-        background: rgb(0,228,222);
-        background: linear-gradient(90deg, rgba(0,228,222,1) 0%, rgba(0,137,156,0.950) 61%, rgba(0,121,117,0.824) 100%);
-    }
-    #col1 {
-        width: 20%; /* Ширина первой колонки */
-        background: #e8ae08; /* Цвет фона первой колонки */
-        padding: 10px;
-        border-radius: 10px 10px 10px 10px;
-        box-shadow: 0 4px 8px rgba(0, 0.3, 0.3, 0.5);
-    }
-    #col_App {
-        align: left;
-        text-align: left;
-        {#width: 20%; /* Ширина первой колонки */#}
-        {#background: rgba(67, 255, 0, 0.5); /* Цвет фона первой колонки */#}
-        {#padding: 10px;#}
-        {#border-radius: 10px 10px 10px 10px;#}
-        {#box-shadow: 0 4px 8px rgba(0, 0.3, 0.3, 0.5);#}
-    }
-    .TextInColumn {
-        font-weight: bold;
-        font-size: 20px;
-    }
-
-    #col2 {
-        width: 60%; /* Ширина второй колонки */
-        background: #f0f0f0; /* Цвет фона второй колонки */
-        padding: 10px;
-        border-radius: 10px 10px 10px 10px;
-        box-shadow: 0 4px 8px rgba(0, 0.3, 0.3, 0.5);
-    }
-    #col3 {
-        width: 20%; /* Ширина третьей колонки */
-        background: #e8ae08; /* Цвет фона третьей колонки */
-        padding: 10px;
-        border-radius: 10px 10px 10px 10px;
-        box-shadow: 0 4px 8px rgba(0, 0.3, 0.3, 0.5);
-    }
-
-    #col_email {
-        text-align: right;
-        width: 50%;
-        padding-right: 90px;  /* separate between cells (range) */
-    }
-
-    #col_url {
-        text-align: left;
-        width: 50%;
-        padding-left: 90px;  /* separate between cells (range) */
-    }
-
-    .linkToMain {
-        margin-right: 10px;
-        margin-bottom: 15px;
-        bottom: 15px;
-        left: 10px;
-        position: fixed;
-    }
-
-    a {
-        font-weight: lighter;
-        cursor: default;
-        color: rgb(0, 43, 73);
-        text-decoration: none;
-    }
-    a:hover {
-        color: rgb(0, 43, 73);
-        cursor: pointer;
-        text-decoration: underline;
-    }
-
-    html {
-        background: url(/classificator/images/bg_01.jpg) no-repeat center center fixed;
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
-    }
-
-    body {
-        margin: 0;
-        color: #000000;
-        /* Растягиваем body по высоте html */
-        min-height: 50%;
-        min-width: 50%;
-        display: grid;
-        grid-template-rows: auto 1fr auto;
-    }
-
-    .footer {
-        text-align: right;
-        font-weight: bold;
-        color: #005a9d;
-        margin-bottom: 5px;
-        position: fixed;  /*absolute;*/ /* footer всегда в нижней части экрана */
-        bottom: 0;
-        width: 100%;
-    }
-
-    .zoom-effect {
-        transition: 0.5s;
-    }
-
-    .zoom-effect:hover {
-        transform: scale(2);
-    }
-</style>
+<link rel="stylesheet" href="/classificator/styles/style.css">
 
 </head>
 
