--- a/templates/about.html
+++ b/templates/about.html
@@ -4,102 +4,12 @@
     {{ super() }}
 
 <style>
-    /* картинка на странице */
-    .minimized {
-        width: 300px;
-        cursor: pointer;
-        border: 1px solid #FFF;
-    }
-
-    .minimized:hover {
-        border: 1px solid yellow;
-    }
-
-    /* увеличенная картинка */
-    #magnify {
-        display: none;
-
-    /* position: absolute; upd: 24.10.2016 */
-        position: fixed;
-        max-width: 600px;
-        height: auto;
-        z-index: 9999;
-    }
-
-    #magnify img {
-        width: 100%;
-    }
-
-    /* затемняющий фон */
-    #overlay {
-        display: none;
-
-        background: #000;
-        position: fixed;
-        top: 0;
-        left: 0;
-        height: 100%;
-        width: 100%;
-        opacity: 0.5;
-        z-index: 9990;
-    }
-
-    /* кнопка закрытия */
-    #close-popup {
-        width: 30px;
-        height: 30px;
-
-        background: #FFFFFF;
-        border: 1px solid #AFAFAF;
-        border-radius: 15px;
-        cursor: pointer;
-        position: absolute;
-        top: 15px;
-        right: 15px;
-    }
-
-    #close-popup i {
-        width: 30px;
-        height: 30px;
-        background: url(https://codernote.ru/files/cross.png) no-repeat center center;
-        background-size: 16px 16px;
-        display: block;
-    }
-
-    @keyframes rota {
-        25% { transform: rotate(360deg); }
-    }
-
-    #close-popup:hover {
-        animation: rota 4s infinite normal;
-        -webkit-animation-iteration-count: 1;
-        animation-iteration-count: 1;
-    }
+    .topPage {
+    position: fixed;
+    right: 10px;
+    bottom: 30px;
+   }
 </style>
-
-<script>
-    $(function(){
-  $('.minimized').click(function(event) {
-    var i_path = $(this).attr('src');
-    $('body').append('<div id="overlay"></div><div id="magnify"><img src="'+i_path+'"><div id="close-popup"><i></i></div></div>');
-    $('#magnify').css({
-     left: ($(document).width() - $('#magnify').outerWidth())/2,
-     // top: ($(document).height() - $('#magnify').outerHeight())/2 upd: 24.10.2016
-            top: ($(window).height() - $('#magnify').outerHeight())/2
-   });
-    $('#overlay, #magnify').fadeIn('fast');
-  });
-
-  $('body').on('click', '#close-popup, #overlay', function(event) {
-    event.preventDefault();
-
-    $('#overlay, #magnify').fadeOut('fast', function() {
-      $('#close-popup, #magnify, #overlay').remove();
-    });
-  });
-});
-</script>
-
 
     <div class="text-align: center">
     <table>
@@ -129,7 +39,7 @@
 			<td id="col_url">
     			<div>
                     <a target="_blank" href="/classificator/images/new_url.png">
-                        <img src="/classificator/images/new_url.png"  alt="QR with url-address"a width="185"; height="185"; style="margin-left: 3px; margin-top: 3px; margin-right: 3px; margin-bottom: 3px;"; class="zoom-effect">
+                        <img src="/classificator/images/new_url.png"  alt="QR with url-address" width="185"; height="185"; style="margin-left: 3px; margin-top: 3px; margin-right: 3px; margin-bottom: 3px;"; class="zoom-effect">
                     </a>
                 </div>
                 <a target="_blank" title="Открыть QR-код в новом окне" href="/classificator/images/new_url.png">Открыть в новом окне для сканирования</a>
@@ -138,8 +48,10 @@
     </table>
 
 
+    <a href="#" title="Вернуться к началу страницы" class="topPage"><img src="/classificator/images/top_page.png" alt="top" width="36"; height="36";</a>
+
 
     <div class="linkToMain">
-        <a title="Нажмите, чтобы перейти" href={{ url_for("main_page") }}><img src="/classificator/media/main_64.png" alt="home" width="16"; height="16"; style="margin-right: 10px;";/>Вернуться на главную страницу</a></div>
-    </div>
+        <a title="На главную страницу" href={{ url_for("main_page") }}><img src="/classificator/images/main_64.png" alt="home" width="36"; height="36";/></a>
+    </div></div>
 {% endblock %}
