--- a/templates/application.html
+++ b/templates/application.html
@@ -3,6 +3,14 @@
 {% block content %}
     {{ super() }}
 
+<style>
+    .topPage {
+    position: fixed;
+    right: 10px;
+    bottom: 30px;
+   }
+</style>
+
     <div class="text-align: center">
     <table>
         <tr>
@@ -14,19 +22,59 @@
         </tr>
         <tr>
             <td id="col_App" colspan="3" >
-                <ul>
-                    {% for m in menu -%}
-                        <li>{{m}}</li>
-                    {% endfor -%}
+                <ul style="font-size: 22px;">
+                    <li><a href="#Описание">Описание приложения</a></li>
+                    <li><a href="#Системные требования">Системные требования</a></li>
                 </ul>
+                <p id="Описание приложения" style="font-size: 22px; text-align: center; background: rgba(67, 255, 0, 0.5); border-radius: 10px 10px 10px 10px; padding: 10px; font-weight: bold;">Описание приложения<br>
+                    <div style="font-size: 18px; text-align: justify; line-height: 1.3;">
+                        Программа предназначена для классификации месторождений по действующим нормативным документам.
+                        Сбор основной геолого-промысловой информации по месторождению (сведения о недропользователе,
+                        геологические данные, данные по запасам УВС с указанием величин и их категорийности по принятым документам),
+                        учет наличия закачки на месторождении/залежи, данные по геологической и гидродинамической моделям,
+                        а также данные по действующим системам сбора и подготовки продукции скважин. Сохранение данных
+                        в формате MS Excel, с возможностью добавления дополнительного листа с информацией
+                        (в случае многопластового месторождения). Дополнительная возможность - создание шаблона файла протокола ЦКР в зависимости
+                        от классификации месторождения с характеристикой УВ-сырья и основных технологических показателей.
+                    </div>
+                </p>
+
+                <p id="Системные требования" style="font-size: 22px; text-align: center; background: rgba(67, 255, 0, 0.5); border-radius: 10px 10px 10px 10px; padding: 10px; font-weight: bold;">Системные требования<br>
+                    <div style="font-size: 18px; text-align: justify; margin-left: 20px; line-height: 1.3;">
+                        Для стабильной работы приложения необходимы следующие системные требования:<br>
+
+                        <u>Минимальные системные требования:</u>
+                        <ul>
+                            <li>операционная система Windows XP (32-bit);</li>
+                            <li>установленный Microsoft Office 2003;</li>
+                            <li>установленный Microsoft .NET Framework 3.5;</li>
+                            <li>процессор с тактовой частотой 1,2 ГГц;</li>
+                            <li>объем свободного места на жестком диске - не менее 50 МБ;</li>
+                            <li>объем оперативной памяти - 2,0 ГБ.</li>
+                        </ul>
+
+                        <u>Рекомендуемые системные требования:</u>
+                        <ul>
+                            <li>операционная система Windows 7 (64-bit) или выше;</li>
+                            <li>установленный Microsoft Office 2010 или выше;</li>
+                            <li>установленный Microsoft .NET Framework 4.0 или выше;</li>
+                            <li>процессор с тактовой частотой 2 ГГц;</li>
+                            <li>объем свободного места на жестком диске - не менее 50 МБ;</li>
+                            <li>объем оперативной памяти - 2,0 ГБ.</li>
+                        </ul>
+
+                    </div>
+                </p>
+
             </td>
         </tr>
     </table>
 
-    <br><br>
+
+    <a href="#" title="Вернуться к началу страницы" class="topPage"><img src="/classificator/images/top_page.png" alt="top" width="36"; height="36";</a>
 
 
     <div class="linkToMain">
-        <a title="Нажмите, чтобы перейти" href={{ url_for("main_page") }}><img src="/classificator/media/main_64.png" alt="home" width="16"; height="16"; style="margin-right: 10px;";/>Вернуться на главную страницу</a></div>
-    </div>
+        <a title="На главную страницу" href={{ url_for("main_page") }}><img src="/classificator/images/main_64.png" alt="home" width="36"; height="36";/></a>
+    </div></div>
 {% endblock %}
