--- a/templates/application.html
+++ b/templates/application.html
@@ -9,6 +9,29 @@
     right: 10px;
     bottom: 30px;
    }
+
+   #TextAbout {
+    margin-left: 100px;
+    margin-right: 100px;
+    background-color: rgba(220, 255, 255, 0.5);
+    padding: 10px;
+    border-block: 10px;
+    border-radius: 10px;
+   }
+
+   /*ol {*/
+   /* убираем стандартную нумерацию */
+   /*list-style: none;*/
+    /*Идентифицируем счетчик и даем ему имя li. Значение счетчика не указано - по умолчанию оно равно 0 */
+   /*counter-reset: li;*/
+   /* }*/
+
+   /* li:before {*/
+   /* Определяем элемент, который будет нумероваться — li. Псевдоэлемент before указывает, что содержимое, вставляемое при помощи свойства content, будет располагаться перед пунктами списка. Здесь же устанавливается значение приращения счетчика (по умолчанию равно 1). */
+   /*counter-increment: li;*/
+   /* С помощью свойства content выводится номер пункта списка. counters() означает, что генерируемый текст представляет собой значения всех счетчиков с таким именем. Точка в кавычках добавляет разделяющую точку между цифрами, а точка с пробелом добавляется перед содержимым каждого пункта списка */
+   /*content: counters(li, ".") ". ";*/
+   /* }*/
 </style>
 
     <div class="text-align: center">
@@ -18,16 +41,18 @@
             <a href={{ url_for("about_app_page") }}> {{ title }}</a></td>
         </tr>
         <tr>
-            <td id="col0" colspan="3" height="60">Содержимое страницы &laquo;{{ title }}&raquo;</td>
+            <td id="col0" colspan="3" height="60">Описание программы &laquo;Классификатор&raquo;</td>
         </tr>
         <tr>
             <td id="col_App" colspan="3" >
                 <ul style="font-size: 22px;">
-                    <li><a href="#Описание">Описание приложения</a></li>
+                    <li><a href="#Описание приложения">Описание приложения</a></li>
+                    <li><a href="#Лицензионное соглашение">Лицензионное соглашение</a></li>
                     <li><a href="#Системные требования">Системные требования</a></li>
+                    <li><a href="#Особенности приложения">Особенности приложения</a></li>
                 </ul>
-                <p id="Описание приложения" style="font-size: 22px; text-align: center; background: rgba(67, 255, 0, 0.5); border-radius: 10px 10px 10px 10px; padding: 10px; font-weight: bold;">Описание приложения<br>
-                    <div style="font-size: 18px; text-align: justify; line-height: 1.3;">
+                <p id="Описание приложения" style="font-size: 22px; text-align: center; background: rgba(67, 255, 0, 0.5); border-radius: 10px 10px 10px 10px; padding: 10px; margin-bottom: 22px; font-weight: bold;">Описание приложения<br>
+                    <div id="TextAbout" style="font-size: 18px; text-align: justify; line-height: 1.3;">
                         Программа предназначена для классификации месторождений по действующим нормативным документам.
                         Сбор основной геолого-промысловой информации по месторождению (сведения о недропользователе,
                         геологические данные, данные по запасам УВС с указанием величин и их категорийности по принятым документам),
@@ -39,8 +64,70 @@
                     </div>
                 </p>
 
+                <p id="Лицензионное соглашение" style="font-size: 22px; text-align: center; background: rgba(67, 255, 0, 0.5); border-radius: 10px 10px 10px 10px; padding: 10px; margin-bottom: 22px; font-weight: bold;">Лицензионное соглашение<br>
+                    <div id="TextAbout" style="font-size: 18px; text-align: justify; line-height: 1.3;">
+                        Программа является лицензированным программным продуктом.
+                        Внимательно ознакомьтесь с условиями лицензионного соглашения перед началом работы с программным обеспечением, на которое оно распространяется.<br />
+                        Установка, так же как и использование программы «Классификатор», свидетельствует о вашем согласии с условиями данного лицензионного соглашения.
+                        Если вы не согласны с условиями, предложенными данной лицензией, то должны удалить файлы программы «Классификатор» со своих устройств хранения информации и
+                        отказаться от дальнейшего использования этого программного продукта.<br />
+                        «Классификатор» (далее «ПО») является бесплатным («Freeware») и распространяется по принципу «как есть» («as is»).
+
+
+                        <ol>
+                            <li>Использование
+                                <ol>
+                                    <li>Вы имеете право устанавливать и использовать «Классификатор» как на домашних компьютерах,
+                                    так и на компьютерах в организациях любой формы собственности, в том числе в государственных и муниципальных учреждениях.</li>
+                                    <li>Вы можете бесплатно распространять данное ПО в виде оригинального дистрибутива.</li>
+                                </ol>
+                            </li><br>
+
+                            <li>Ограничения
+                                <ol>
+                                     <li>Вы не вправе декомпилировать, дизассемблировать, модифицировать, дополнять, разбирать, переводить, адаптировать,
+                                     реорганизовывать, исправлять ошибки или производить какие-либо изменения в программу и/или её исполняемые компоненты.</li>
+                                     <li>Вы не имеете права распространять данное ПО за материальное вознаграждение, если только не имеете соответствующего разрешения от правообладателя.</li>
+                                     <li>Вы не можете распространять не оригинальный дистрибутив, если не имеете соответствующего разрешения правообладателя.</li>
+                                     <li>Запрещается удаление копирайта или другой информации об авторах и правообладателях ПО.</li>
+                                     <li>Запрещается сдавать ПО в аренду или прокат.</li>
+                                     <li>За нарушение интеллектуальных прав на ПО нарушитель несёт гражданскую, административную или уголовную ответственность
+                                     в соответствии с действующим законодательством.</li>
+                                </ol>
+                            </li><br>
+
+                            <li>Ограничение ответственности
+                                <ol>
+                                     <li>Вы соглашаетесь с тем, что данное ПО может содержать ошибки, а, следовательно, и с тем,
+                                     что сами должны заботиться о создании резервных копий своих файлов.</li>
+                                     <li>Правообладатель не даёт никаких гарантий работоспособности ПО на конкретном оборудовании.</li>
+                                     <li>Правообладатель не даёт никаких гарантий работоспособности ПО, если Вы не обновляете его до актуальных версий.</li>
+                                     <li>В виду того, что программа распространяется по принципу «как есть» («as is»), Вы должны осознавать, что используете данное ПО
+                                     на свой страх и риск. Правообладатель не несёт ответственности за какие-либо убытки и/или ущерб (в том числе убытки,
+                                     в связи с недополученной коммерческой прибылью, прерыванием деятельности, утратой информации или иной имущественный ущерб),
+                                     возникающий в связи с использованием или невозможностью использования данного ПО.</li>
+                                </ol>
+                            </li><br>
+
+                            <li>Объекты авторского права
+                                <ol>
+                                     <li>Всеми авторскими правами на «Классификатор месторождений» эксклюзивно владеет автор программы – Есаулов Павел.</li>
+                                     <li>Сторонние продукты и компоненты включены в состав дистрибутива с соответствующего согласия их правообладателей (в том числе согласием считается и соблюдение лицензионного соглашения).</li>
+                                     <li>Настоящее Лицензионное соглашение регулируется в соответствии с законодательством Российской Федерации и международными нормами авторского права.</li>
+                                </ol>
+                            </li><br>
+
+                            <li>Техническая поддержка
+                                <ol>
+                                     <li>Техническая поддержка оказывается при условии, что у Вас установлена актуальная версия оригинальной сборки программы.</li>
+                                     <li>Техническую поддержку можно получить, отправив письмо на e-mail: <a href="mailto:ogfc@mail.ru?subject=Вопрос по Классификатору 5.4";>ogfc@mail.ru</a></li>
+                                </ol>
+                        </ol>
+                    </div>
+                </p>
+
                 <p id="Системные требования" style="font-size: 22px; text-align: center; background: rgba(67, 255, 0, 0.5); border-radius: 10px 10px 10px 10px; padding: 10px; font-weight: bold;">Системные требования<br>
-                    <div style="font-size: 18px; text-align: justify; margin-left: 20px; line-height: 1.3;">
+                    <div id="TextAbout" style="font-size: 18px; text-align: justify; line-height: 1.3;">
                         Для стабильной работы приложения необходимы следующие системные требования:<br>
 
                         <u>Минимальные системные требования:</u>
@@ -62,6 +149,11 @@
                             <li>объем свободного места на жестком диске - не менее 50 МБ;</li>
                             <li>объем оперативной памяти - 2,0 ГБ.</li>
                         </ul>
+                    </div>
+                </p>
+
+                <p id="Особенности приложения" style="font-size: 22px; text-align: center; background: rgba(67, 255, 0, 0.5); border-radius: 10px 10px 10px 10px; padding: 10px; margin-bottom: 22px; font-weight: bold;">Особенности приложения<br>
+                    <div id="TextAbout" style="font-size: 18px; text-align: justify; line-height: 1.3;">
 
                     </div>
                 </p>
